[package]
name = "libxdp-sys"
version = "0.2.1+1.4.3"
edition = "2021"
description = "Rust bindings for libxdp"
repository = "https://github.com/chenhengqi/libxdp-sys"
homepage = "https://github.com/chenhengqi/libxdp-sys"
keywords = ["libxdp", "xdp"]
authors = ["Hengqi Chen <hengqi.chen@gmail.com>", "Nathanial Lattimer <d0nut@resync.gg>"]
license = "LGPL-2.1 OR BSD-2-Clause"
build = "build.rs"
links = "libxdp"

[build-dependencies]
bindgen = "0.70.1"
