[package]
name = "libxdp-sys"
version = "0.2.2+1.5.5"
edition = "2024"
description = "Rust bindings for libxdp"
repository = "https://github.com/chenhengqi/libxdp-sys"
homepage = "https://github.com/chenhengqi/libxdp-sys"
keywords = ["libxdp", "xdp"]
authors = ["Hengqi Chen <hengqi.chen@gmail.com>", "Nathanial Lattimer <d0nut@resync.gg>"]
license = "LGPL-2.1 OR BSD-2-Clause"
build = "build.rs"
links = "xdp"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0"

[dependencies]
libbpf-sys = { version = "1.5.1", features = [] }

[features]
default = []
vendored = ["libbpf-sys/vendored"]
vendored-libelf = ["libbpf-sys/vendored-libelf"]
