[package]
name = "libxdp-sys"
version = "0.2.3+1.5.6"
edition = "2024"
description = "Rust bindings for libxdp"
repository = "https://github.com/chenhengqi/libxdp-sys"
homepage = "https://github.com/chenhengqi/libxdp-sys"
keywords = ["libxdp", "xdp"]
authors = ["Hengqi Chen <hengqi.chen@gmail.com>", "Nathanial Lattimer <d0nut@resync.gg>", "Karsten Becker <skipper.pasty.0a@icloud.com>"]
license = "LGPL-2.1 OR BSD-2-Clause"
build = "build.rs"
links = "xdp"

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.27"

[dependencies]
# This version is determined by the tag of xdp-tools/lib/libbpf which is currently 1.5.0
# We pin to an exact version to avoid breaking changes.
libbpf-sys = { version = "=1.5.0", features = [] }

[features]
default = []
vendored = ["libbpf-sys/vendored"]
vendored-libelf = ["libbpf-sys/vendored-libelf"]
